Add Copyright and disclaimers to man pages.

--- a/trunk/doc/man/man1/slurmctld.1
+++ b/trunk/doc/man/man1/slurmctld.1
@@ -61,4 +61,20 @@ this special configuration file will not be recognized by \fBslurmd\fR
 or the Slurm programs. If you desire changing communication ports, 
 the location of the temporary file system, or other parameters used 
 by other Slurm components, change the common configuration file.
-
+.SH "COPYING"
+Copyright (C) 2002 The Regents of the University of California.
+Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
+UCRL-CODE-2002-040.
+.LP
+This file is part of SLURM, a resource management program.
+For details, see <http://www.llnl.gov/linux/slurm/>.
+.LP
+SLURM is free software; you can redistribute it and/or modify it under
+the terms of the GNU General Public License as published by the Free
+Software Foundation; either version 2 of the License, or (at your option)
+any later version.
+.LP
+SLURM is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+details.
