--- a/trunk/doc/man/man3/slurm_error.3
+++ b/trunk/doc/man/man3/slurm_error.3
@@ -62,3 +62,35 @@ int main (int argc, char *argv[])
 .br
 }
 .ec
+.SH "COPYING"
+Copyright (C) 2002 The Regents of the University of California.
+Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
+UCRL-CODE-2002-040.
+.LP
+This file is part of SLURM, a resource management program.
+For details, see <http://www.llnl.gov/linux/slurm/>.
+.LP
+SLURM is free software; you can redistribute it and/or modify it under
+the terms of the GNU General Public License as published by the Free
+Software Foundation; either version 2 of the License, or (at your option)
+any later version.
+.LP
+SLURM is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+details.
+.SH "SEE ALSO"
+.LP 
+\fBslurm_allocate_resources\fR(3), \fBslurm_cancel_job\fR(3), 
+\fBslurm_free_ctl_conf\fR(3), 
+\fBslurm_free_resource_allocation_response_msg\fR(3), \fBslurm_free_job_info\fR(3), 
+\fBslurm_free_key\fR(3), \fBslurm_free_node_info\fR(3), \fBslurm_free_partition_info\fR(3), 
+\fBslurm_free_submit_response_response_msg\fR(3), 
+\fBslurm_get_key\fR(3), 
+\fBslurm_init_part_desc_msg\fR(3), \fBslurm_init_job_desc_msg\fR(3), 
+\fBslurm_job_will_run\fR(3), 
+\fBslurm_load_ctl_conf\fR(3), \fBslurm_load_jobs\fR(3),  \fBslurm_load_node\fR(3), \fBslurm_load_partitions\fR(3), 
+\fBslurm_reconfigure\fR(3), \fBslurm_submit_batch_job\fR(3), 
+\fBslurm_update_job\fR(3), \fBslurm_update_node\fR(3), \fBslurm_update_partition\fR(3)
+
+ 
