Add description of slurm_complete_job and slurm_complete_job_step

--- a/trunk/doc/man/man3/slurm_error.3
+++ b/trunk/doc/man/man3/slurm_error.3
@@ -81,7 +81,9 @@ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 details.
 .SH "SEE ALSO"
 .LP 
-\fBslurm_allocate_resources\fR(3), \fBslurm_cancel_job\fR(3), 
+\fBslurm_allocate_resources\fR(3), 
+\fBslurm_cancel_job\fR(3), \fBslurm_cancel_job_step\fR(3), 
+\fBslurm_complete_job\fR(3), \fBslurm_complete_job_step\fR(3), 
 \fBslurm_free_ctl_conf\fR(3), 
 \fBslurm_free_resource_allocation_response_msg\fR(3), \fBslurm_free_job_info\fR(3), 
 \fBslurm_free_key\fR(3), \fBslurm_free_node_info\fR(3), \fBslurm_free_partition_info\fR(3), 
