--- a/trunk/doc/man/man3/slurm_error.3
+++ b/trunk/doc/man/man3/slurm_error.3
@@ -92,7 +92,7 @@ details.
 \fBslurm_init_part_desc_msg\fR(3), \fBslurm_init_job_desc_msg\fR(3), 
 \fBslurm_job_will_run\fR(3), 
 \fBslurm_load_ctl_conf\fR(3), \fBslurm_load_jobs\fR(3),  \fBslurm_load_node\fR(3), \fBslurm_load_partitions\fR(3), 
-\fBslurm_reconfigure\fR(3), \fBslurm_submit_batch_job\fR(3), 
+\fBslurm_reconfigure\fR(3), \fBslurm_shutdown\fR(3), \fBslurm_submit_batch_job\fR(3), 
 \fBslurm_update_job\fR(3), \fBslurm_update_node\fR(3), \fBslurm_update_partition\fR(3)
 
  
