removed garlick and dunlap from author list

--- a/trunk/doc/pubdesign/llnl.tex
+++ b/trunk/doc/pubdesign/llnl.tex
@@ -3,8 +3,8 @@
 \usepackage{epsfig}
 \usepackage{hhline}
 
-\author{Moe Jette, Chris Dunlap, Jim Garlick, Mark Grondona\\
- 	\{jette,cdunlap,garlick,mgrondona\}@llnl.gov} 
+\author{Moe Jette, Mark Grondona\\
+ 	\{jette,mgrondona\}@llnl.gov} 
 \title{SLURM: Simple Linux Utility for Resource Management}
 
 
@@ -129,7 +129,7 @@
 \put(60, 280)
 {
   \makebox(0,0)[tl]{\Large 
-\parbox{300pt}{\textit{Moe Jette, Chris Dunlap, Jim Garlick, and Mark Grondona}}}
+\parbox{300pt}{\textit{Moe Jette, and Mark Grondona}}}
 
 }
 
