Updated version of document as reviewed and released.

--- a/trunk/doc/pubdesign/llnl.tex
+++ b/trunk/doc/pubdesign/llnl.tex
@@ -115,7 +115,7 @@
 
 \put(335,545)
 {
-  \makebox(0,0)[l]{\large{UCRL-MA-147996}}
+  \makebox(0,0)[l]{\large{UCRL-MA-147996-REV 1}}
 }
 
 \put(60, 460)
