Update documentation, partition key replaced by RootOnly flag.

--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -1,4 +1,4 @@
-.TH SCONTROL "1" "July 2002" "scontrol 0.1" "Slurm components"
+.TH SCONTROL "1" "August 2002" "scontrol 0.1" "Slurm components"
 
 .SH "NAME"
 scontrol \- Used view and modify Slurm configuration and state.
@@ -94,7 +94,7 @@ Display the version number of scontrol being executed.
 .br 
 scontrol: show part class
 .br 
-PartitionName=class MaxTime=30 MaxNodes=2 TotalNodes=10 TotalCPUs=160 Key=NO
+PartitionName=class MaxTime=30 MaxNodes=2 TotalNodes=10 TotalCPUs=160 RootOnly=NO
 .br 
    Default=NO Shared=NO State=UP Nodes=lx[0031-0040] AllowGroups=students
 .br 
