--- a/trunk/doc/man/man3/slurm_job.3
+++ b/trunk/doc/man/man3/slurm_job.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "July 2002" "Morris Jette" "Slurm job management calls"
+.TH "Slurm API" "3" "August 2002" "Morris Jette" "Slurm job management calls"
 .SH "NAME"
 .LP 
 \fBslurm_job\fR \- Slurm job management calls
@@ -251,4 +251,6 @@ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 details.
 .SH "SEE ALSO"
 .LP 
-\fBscancel\fR(1), \fBsrun\fR(1), \fBslurm_free_job_info\fR(3), \fBslurm_free_key\fR(3), \fBslurm_get_errno\fR(3), \fBslurm_load_jobs\fR(3), \fBslurm_get_key\fR(3), \fBslurm_perror\fR(3), \fBslurm_strerror\fR(3)
+\fBscancel\fR(1), \fBsrun\fR(1), \fBslurm_free_job_info\fR(3), 
+\fBslurm_get_errno\fR(3), \fBslurm_load_jobs\fR(3), 
+\fBslurm_perror\fR(3), \fBslurm_strerror\fR(3)
