Accept a new command "!!" repeats the last command entered.

--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -86,6 +86,9 @@ record counts, etc.
 .TP
 \fIversion\fP
 Display the version number of scontrol being executed.
+.TP
+\fI!!\fP
+Repeat the last command executed.
 
 .SH "EXAMPLE"
 .eo
