Add "-r" option to slurmctld to recover state from checkpoint.

--- a/trunk/doc/man/man1/slurmctld.1
+++ b/trunk/doc/man/man1/slurmctld.1
@@ -33,6 +33,10 @@ Write log messages to the specified file.
 \fB-s <errlev>\fR
 Set syslog logging to the specified level.
 .TP
+\fB-r\fR
+Recover \fBslurmctld\fR state from its last checkpoint 
+(performed periodically and at time of graceful shutdown).
+.TP
 ARGUMENTS
 .TP
 \fIerrlev\fP
