added "#include <slurm_errno.h>" to the example because slurm.h does not include it, yet it is used in the example.

--- a/trunk/doc/man/man3/slurm_info.3
+++ b/trunk/doc/man/man3/slurm_info.3
@@ -121,6 +121,8 @@ On success, zero is returned. On error, -1 is returned, and Slurm error code is 
 #include <stdio.h>
 .br
 #include <slurm.h>
+.br
+#include <slurm_errno.h>
 .LP 
 int main (int argc, char *argv[])
 .br 
