--- a/trunk/doc/man/man3/slurm_job.3
+++ b/trunk/doc/man/man3/slurm_job.3
@@ -180,6 +180,8 @@ On success, zero is returned. On error, -1 is returned, and Slurm error code is 
 \fBESLURM_ALREADY_DONE\fR the specified job has already completed and can not be modified. 
 .LP
 \fBESLURM_ACCESS_DENIED\fR the requesting user lacks authorization for the requested action (e.g. trying to delete or modify another user's job). 
+.LP
+\fBESLURM_INTERCONNECT_FAILURE\fR failed to configure the node interconnect. 
 .SH "EXAMPLE"
 .eo
 .LP 
