--- a/trunk/doc/man/man3/slurm_error.3
+++ b/trunk/doc/man/man3/slurm_error.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "August 2002" "Morris Jette" "Slurm error calls"
+.TH "Slurm API" "3" "September 2002" "Morris Jette" "Slurm error calls"
 .SH "NAME"
 .LP 
 \fBslurm_job\fR \- Slurm error calls
@@ -86,10 +86,11 @@ details.
 \fBslurm_complete_job\fR(3), \fBslurm_complete_job_step\fR(3), 
 \fBslurm_free_ctl_conf\fR(3), 
 \fBslurm_free_resource_allocation_response_msg\fR(3), \fBslurm_free_job_info\fR(3), 
+\fBslurm_free_job_step_create_response_msg\fR(3), 
 \fBslurm_free_node_info\fR(3), \fBslurm_free_partition_info\fR(3), 
 \fBslurm_free_submit_response_response_msg\fR(3), 
 \fBslurm_init_part_desc_msg\fR(3), \fBslurm_init_job_desc_msg\fR(3), 
-\fBslurm_job_will_run\fR(3), 
+\fBslurm_job_step_create\fR(3), \flslurm_job_will_run\fR(3), 
 \fBslurm_load_ctl_conf\fR(3), \fBslurm_load_jobs\fR(3),  \fBslurm_load_node\fR(3), \fBslurm_load_partitions\fR(3), 
 \fBslurm_reconfigure\fR(3), \fBslurm_shutdown\fR(3), \fBslurm_submit_batch_job\fR(3), 
 \fBslurm_update_job\fR(3), \fBslurm_update_node\fR(3), \fBslurm_update_partition\fR(3)
