Add description of new error code: Invalid task distribution specification.

--- a/trunk/doc/man/man3/slurm_job.3
+++ b/trunk/doc/man/man3/slurm_job.3
@@ -242,6 +242,8 @@ On success, zero is returned. On error, -1 is returned, and Slurm error code is 
 \fBESLURM_ACCESS_DENIED\fR the requesting user lacks authorization for the requested action (e.g. trying to delete or modify another user's job). 
 .LP
 \fBESLURM_INTERCONNECT_FAILURE\fR failed to configure the node interconnect. 
+.LP
+\fBESLURM_BAD_DIST\fR task distribution specification is invalid. 
 .SH "EXAMPLE"
 .eo
 .LP 
