--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -1,4 +1,4 @@
-.TH SINFO "1" "August 2002" "sinfo 0.1" "Slurm components"
+.TH SINFO "1" "October 2002" "sinfo 0.1" "Slurm components"
 
 .SH "NAME"
 sinfo \- Used to view information of jobs located in the scheduling queue.
@@ -9,20 +9,44 @@ sinfo \- Used to view information of jobs located in the scheduling queue.
 \fBsinfo\fR is used to view partition and node status and information for a 
 system running SLURM. 
 
-.TP
-OPTIONS
+.SH "OPTIONS"
 .TP
 \fB-?\fR, \fB--help\fR
 Print a help message describing the usage of \fBsinfo\fR.
 .TP
-\fB-s\fR, \fB--state\fR
+\fB-l\fR , \fB--long\fR
+List more detailed information than normally provided.
+.TP
+\fB-n <node>\fR , \fB--node <node>\fR
+List information on the specified node(s).
+.TP
+\fB-t <state>\fR , \fB--state <state>\fR
 List nodes of a given state.
 .TP
-\fB-p\fR, \fB--partition\fR
+\fB--summarize\fR
+List only a partition state summary. Do not show individual nodes.
+.TP
+\fB-p <partition>\fR, \fB--partition <partition>\fR
 Display information about the specified partition.  If \fB-p\fR is used with a
 \fB-n\fR with no arguments, all the nodes of the specified partition will be
 displayed.
 .TP
+\fB--usage\fR
+Dipaly brief description of commands and options.
+.TP
+\fB-v\fR , \fB--verbose\fR
+Provide detailed event logging through program execution.
+.SH "ARGUMENTS"
+.TP
+\fBnode\fR
+The names of one or more comma separated nodes. Names may be specified using regular expressions.
+For example "linux[00-07]" would indicate eight nodes, "linux00" through "linux07".
+.TP
+\fBpartition\fR
+The names of one or more comma separated partitions.
+.TP
+\fBstate\fR
+A valid node state. Possible values include: DOWN, UNKNOWN, IDLE, ALLOCATED, DRAINED, and DRAINING.
 .SH "EXAMPLE"
 .eo
 PUT THE EXAMPLE HERE...
