--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -1,6 +1,6 @@
 \." $Id$
 .\"
-.TH SRUN "1" "February 2002" "srun 0.1" "slurm components"
+.TH SRUN "1" "October 2002" "srun 0.1" "slurm components"
 .SH "NAME"
 srun \- run parallel jobs
 .SH SYNOPSIS
@@ -48,6 +48,9 @@ options.
 Request resources from partition "\fIpartition\fR." Partitions
 are created by the slurm administrator.
 .TP
+\fB\-t\fR, \fB\-\-time\fR=\fIminutes\fR
+Establish a time limit to terminate the job after the specified number of minutes.
+.TP
 \fB\-\-cddir\fR=\fIpath\fR
 have the remote processes do a chdir to \fIpath\fR before beginning
 execution. The default is to chdir to the current working directory
@@ -58,6 +61,15 @@ exit if resources are not immediately
 available. By default, \fB\-\-immediate\fR is off, and
 .B srun
 will block until resources become available.
+.TP
+\fB\-k\fR, \fB\-\-kill-off\fR
+Do not automatically terminate a job of one of the nodes it has been allocated 
+fails. The job will assume all responsibilities for fault-tolerance. The default 
+action is to termniate the job upon node failure.
+.TP
+\fB\-s\fR, \fB\-\-share\fR
+The job can share nodes with other running jobs. This may result in faster job 
+initiation and higher system utilization, but lower application performance.
 .TP
 \fB\-O\fR, \fB\-\-overcommit\fR
 overcommit resources. Normally,
