Specify default job name is the executable's. name.

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -102,7 +102,7 @@ node, process 2 to the second, and so on.
 \fB\-J\fR, \fB\-\-job\-name\fR=\fIjobname\fR
 Specify a name for the job. The specified name will appear along with
 the job id number when querying running jobs on the system. The default
-is an empty name.
+is the supplied \fBexecutable\fR program's name.
 .TP
 \fB\-o\fR, \fB\-\-output\fR=\fIout\fR
 Specify how stdout is to be directed. By default,
